test_data/Json/Unexpected/Unserializable/InvalidModelType/DataSpecificationIec61360/wrong.json.exception
Expected the model type 'DataSpecificationIec61360', but got soReallyUtterlyInvalid at: modelType